style: correcting spacings and backgrounds

--- a/src/components/Calendar/Calendar.module.scss
+++ b/src/components/Calendar/Calendar.module.scss
@@ -1,10 +1,10 @@
 .calendar {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: calc(100vh - 2 * (44px + 24px));
   justify-content: center;
   position: fixed;
-  top: 0;
+  top: calc(44px + 24px);
   transition: 600ms ease-out;
   width: calc(100% - 2 * var(--spacing-base));
 
